adjusted navigation button overlap on 576-758 width and fixed too large sources icons

--- a/src/components/Data/DataSource.css
+++ b/src/components/Data/DataSource.css
@@ -72,7 +72,11 @@
     width: 60.500%;
 }
 }
-
+@media only screen and (min-width: 1110px){
+  .zone > img {
+    width: 60.500%;
+}
+}
 @media only screen and (max-width: 1110px) {
   .arrow {
     display: none;
